Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28484

InnoDB encryption key rotation is not being marked completed

    XMLWordPrintable

Details

    Description

      As part of MDEV-27058, a condition at the end of the function fil_crypt_flush_space() was inadvertently inverted. That condition had been originally added as part of MDEV-25026, to prevent writing to tablespaces that had been freed.

      The impact seems to be that fil_crypt_complete_rotate_space() will fail to update the persistent state of the tablespace.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: