MDEV-28484 InnoDB encryption key rotation is not being marked completed

fil_crypt_flush_space(): Correct a condition that was refactored
incorrectly in commit aaef2e1d8c843d1e40b1ce0c5199c3abb3c5da28